--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'com.android.library'
+//apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.yy.toolslib"
+//        applicationId "com.yy.toolslib"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
